--- a/Css/estiloprod.css
+++ b/Css/estiloprod.css
@@ -35,9 +35,6 @@ header{
   padding: 30px; 0 30px 0;
 }
 
-.container-icon{
-position:relative;
-    }
 
 .count-products{
 position:absolute;
@@ -183,4 +180,7 @@ font-size: 20px
       background-color:rgb(154, 168, 142);
       padding: 15px 10px;
       cursor: pointer;
+}
+@media only screen and (max-width: 600px) {
+    
 }
